# rewind

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  README.tr.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/rewind-cli/: Cargo.toml
crates/rewind-cli/src/: debug.rs  main.rs
crates/rewind-core/: Cargo.toml
crates/rewind-core/src/: attest.rs  cbor.rs  cid.rs  error.rs  hlc.rs  lib.rs  log.rs  manifest.rs  merkle.rs  verify.rs  writer.rs
crates/rewind-py/: Cargo.toml  pyproject.toml
crates/rewind-py/src/: lib.rs
examples/: deterministic_oss.py  openrouter_agent.py  tooluse_agent.py
python/rewind/: README.md  pyproject.toml
python/rewind/src/rewind/: __init__.py  capture.py  commitment.py  context.py  events.py  guard.py  inference.py  replay.py
python/rewind/tests/: test_capture.py  test_fork.py  test_guard.py  test_inference.py  test_redaction.py  test_replay.py
runs/support-fixed.rewind/: attestation.cbor  log.cbor  manifest.cbor  run-key.pub
runs/support.rewind/: attestation.cbor  log.cbor  manifest.cbor  run-key.pub
spikes/: spike1_envelope.py  spike_oss_bitwise.py
