[package]
name = "rewind-cli"
description = "Rewind CLI — offline `.rewind` artifact verifier and inspector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["cli", "verify", "tamper-evident", "offline", "debugger"]
categories = ["command-line-utilities", "cryptography", "development-tools"]

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-core = { path = "../rewind-core" }
clap.workspace = true
anyhow.workspace = true
hex.workspace = true
serde_json = "1"
