[package]
name = "rewind-core"
description = "The .rewind artifact engine: content-addressed, hash-chained, Ed25519-attested, offline-verifiable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["blake3", "merkle", "ed25519", "content-addressed", "tamper-evident"]
categories = ["cryptography", "data-structures", "encoding"]

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
ciborium.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
hex.workspace = true
